--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PAM1-ATIVIDADE-LAYOUT</string>
+    <string name="gasto">Tipo de Gasto:</string>
+    <string name="valor">Valor</string>
+    <string name="data">Data</string>
+    <string name="descricao">Descrição:</string>
+    <string name="local">Local</string>
 </resources>
