Inclusao de novo layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="data">Data</string>
     <string name="descricao">Descrição:</string>
     <string name="local">Local</string>
+    <string name="data1">Data1</string>
+    <string name="data2">Data2</string>
 </resources>
